<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_list"
        android:title="@string/title_transactions" />

    <!-- Placeholder to let the FAB sit in the center -->
    <item
        android:id="@+id/navigation_placeholder"
        android:icon="@drawable/ic_placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_customer_ledger"
        android:icon="@drawable/ic_ledger"
        android:title="@string/title_customer_ledger" />
</menu>
