<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bachatkhata.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.bachatkhata.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.bachatkhata.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_savings"
        android:name="com.example.bachatkhata.SavingsFragment"
        android:label="@string/title_savings"
        tools:layout="@layout/fragment_savings" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.example.bachatkhata.AnalyticsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bachatkhata.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bachatkhata.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Activity destination for FAB -->
    <activity
        android:id="@+id/action_add_transaction"
        android:name="com.example.bachatkhata.AddTransactionActivity"
        android:label="@string/add_transaction"
        tools:layout="@layout/activity_add_transaction" />

    <fragment
        android:id="@+id/navigation_customer_ledger"
        android:name="com.example.bachatkhata.CustomerLedgerFragment"
        android:label="Customer Ledger"
        tools:layout="@layout/fragment_customer_ledger" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.bachatkhata.SubscriptionTrackerFragment"
        android:label="Subscriptions"
        tools:layout="@layout/fragment_subscription_tracker" />

    <fragment
        android:id="@+id/navigation_emi_tracker"
        android:name="com.example.bachatkhata.EmiTrackerFragment"
        android:label="EMI Tracker"
        tools:layout="@layout/fragment_emi_tracker" />

    <fragment
        android:id="@+id/navigation_family_wallet"
        android:name="com.example.bachatkhata.FamilyWalletFragment"
        android:label="Family Wallet"
        tools:layout="@layout/fragment_family_wallet" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.bachatkhata.AchievementsFragment"
        android:label="Achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/navigation_health_score"
        android:name="com.example.bachatkhata.HealthScoreFragment"
        android:label="Financial Health Score"
        tools:layout="@layout/fragment_health_score" />

    <fragment
        android:id="@+id/navigation_roundup_settings"
        android:name="com.example.bachatkhata.RoundUpSettingsFragment"
        android:label="Round-Up Settings"
        tools:layout="@layout/fragment_roundup_settings" />

    <fragment
        android:id="@+id/navigation_literacy_lessons"
        android:name="com.example.bachatkhata.LiteracyLessonsFragment"
        android:label="Financial School"
        tools:layout="@layout/fragment_literacy_lessons" />

    <fragment
        android:id="@+id/navigation_carbon_tracker"
        android:name="com.example.bachatkhata.CarbonTrackerFragment"
        android:label="Carbon Footprint"
        tools:layout="@layout/fragment_carbon_tracker" />

</navigation>